--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "testhero10" #Must be unique in Heroku
+          heroku_app_name: "nu220" #Must be unique in Heroku
           heroku_email: "afarahan@nu.edu"
